# comeit

./: .gitignore  .readthedocs.yaml  commit_check.py  header.py  pyproject.toml  rule.py  rule_manager.py  rules.yml
.github/: release-please-config.json
.github/workflows/: ci.yml  code_quality.yml  publish.yml  release-please.yml
comeit/: CHANGELOG.md  __init__.py  __main__.py  commit_reader.py
comeit/checks/: body.py  footer.py  header.py
comeit/rules/: rule.py  rule_creator.py  rule_loader.py  rule_manager.py
comeit/tests/: test_commit_reader.py
comeit/tests/rule_creator/: test_rule_creator.py
comeit/tests/rule_loader/: test_load_rules.py
docs/source/: cli.rst  commit_parser.rst  commit_reader.rst  conf.py  get_started.rst  index.rst  rules_config.rst  user_config.rst
